# api-pacs/docs/openapi.json
@@ -578,6 +578,94 @@
         }
       }
     },
+    "/inference/model/{id}/update": {
+      "put": {
+        "tags": ["inference"],
+        "summary": "Update Inference Model",
+        "description": "Update inference model.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Inference model ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Update inference model request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateInferenceModelRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "2xx": {
+            "description": "Success"
+          },
+          "4xx": {
+            "description": "Client side errors"
+          },
+          "5xx": {
+            "description": "Server side errors"
+          }
+        }
+      }
+    },
+    "/inference/model/feedback/{ID}/update": {
+      "put": {
+        "tags": ["inference"],
+        "summary": "Update Model Feedback",
+        "description": "Update model feedback.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "ID",
+            "in": "path",
+            "description": "Model feedback ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Update model feedback request",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateModelFeedbackRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "2xx": {
+            "description": "Success"
+          },
+          "4xx": {
+            "description": "Client side errors"
+          },
+          "5xx": {
+            "description": "Server side errors"
+          }
+        }
+      }
+    },
     "/inference/model/{id}/remove": {
       "delete": {
         "tags": ["inference"],
@@ -612,37 +700,16 @@
         }
       }
     },
-    "/inference/model/{id}/update": {
-      "put": {
+    "/inference/model/feedback/user/remove": {
+      "delete": {
         "tags": ["inference"],
-        "summary": "Update Inference Model",
-        "description": "Update inference model.",
+        "summary": "Remove Model Feedback",
+        "description": "Remove model feedback.",
         "security": [
           {
             "bearerAuth": []
           }
         ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Inference model ID",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Update inference model request",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateInferenceModelRequest"
-              }
-            }
-          }
-        },
         "responses": {
           "2xx": {
             "description": "Success"
@@ -1638,6 +1705,40 @@
           "inputSeriesFileType": {
             "type": "string",
             "enum": ["PDF", "DCM"]
+          }
+        }
+      },
+      "UpdateModelFeedbackRequest": {
+        "required": ["modelId", "feedbackType"],
+        "type": "object",
+        "properties": {
+          "modelId": {
+            "type": "string"
+          },
+          "feedbackType": {
+            "type": "string",
+            "enum": ["APPROVE", "REJECT"]
+          },
+          "modelFeedbackAnswer": {
+            "type": "object",
+            "nullable": true,
+            "properties": {
+              "questionnaireId": {
+                "type": "string"
+              },
+              "questionnaireQuestions": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              },
+              "questionnaireAnswers": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
           }
         }
       },
