# api-pacs/module/inference/infrastructure/repository/InferenceQueryRepository.go
@@ -111,3 +111,81 @@ func (repository *InferenceQueryRepository) SelectInferenceModels(ctx context.Co
 
 	return inferenceModels, nil
 }
+
+// SelectModelFeedbacksByUserID get model feedback by user ID
+func (repository *InferenceQueryRepository) SelectModelFeedbacksByUserID(ctx context.Context, userID string) ([]entity.ModelFeedback, error) {
+	// firestore client
+	firestoreClient, err := repository.FirebaseAdminSDK.App.Firestore(ctx)
+	if err != nil {
+		log.Println(err)
+		return nil, errors.New(apiError.FirestoreError)
+	}
+
+	// get firestore model feedback
+	var modelFeedback entity.ModelFeedback
+
+	query := firestoreClient.Collection(modelFeedback.GetModelName()).Where("user_id", "==", userID)
+	docs, err := query.Documents(ctx).GetAll()
+	if err != nil {
+		log.Println(err)
+		return nil, errors.New(apiError.FirestoreError)
+	}
+
+	var modelFeedbacks []entity.ModelFeedback
+
+	for _, doc := range docs {
+		var modelFeedback entity.ModelFeedback
+		if err := doc.DataTo(&modelFeedback); err != nil {
+			log.Println(err)
+			continue
+		}
+
+		modelFeedback.ID = doc.Ref.ID
+		modelFeedbacks = append(modelFeedbacks, modelFeedback)
+	}
+
+	if len(modelFeedbacks) == 0 {
+		return nil, errors.New(apiError.MissingRecord)
+	}
+
+	return modelFeedbacks, nil
+}
+
+// SelectModelFeedbackAnswersByFeedbackID get model feedback answers by feedback ID
+func (repository *InferenceQueryRepository) SelectModelFeedbackAnswersByFeedbackID(ctx context.Context, feedbackID string) ([]entity.ModelFeedbackAnswer, error) {
+	// firestore client
+	firestoreClient, err := repository.FirebaseAdminSDK.App.Firestore(ctx)
+	if err != nil {
+		log.Println(err)
+		return nil, errors.New(apiError.FirestoreError)
+	}
+
+	// get firestore model feedback answer
+	var modelFeedbackAnswer entity.ModelFeedbackAnswer
+
+	query := firestoreClient.Collection(modelFeedbackAnswer.GetModelName()).Where("model_feedback_id", "==", feedbackID)
+	docs, err := query.Documents(ctx).GetAll()
+	if err != nil {
+		log.Println(err)
+		return nil, errors.New(apiError.FirestoreError)
+	}
+
+	var modelFeedbackAnswers []entity.ModelFeedbackAnswer
+
+	for _, doc := range docs {
+		var modelFeedbackAnswer entity.ModelFeedbackAnswer
+		if err := doc.DataTo(&modelFeedbackAnswer); err != nil {
+			log.Println(err)
+			continue
+		}
+
+		modelFeedbackAnswer.ID = doc.Ref.ID
+		modelFeedbackAnswers = append(modelFeedbackAnswers, modelFeedbackAnswer)
+	}
+
+	if len(modelFeedbackAnswers) == 0 {
+		return nil, errors.New(apiError.MissingRecord)
+	}
+
+	return modelFeedbackAnswers, nil
+}
